[package]
name = "asciit"
version = "1.0.1"
edition = "2021"
description = "A compact and visually appealing ASCII table for your terminal, featuring colored numbers and letters."
license = "MIT"
repository = "https://github.com/Q1CHENL/asciit"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "asciit"
path = "src/asciit.rs"

[dependencies]
colored = "2.1.0"
